Updated beanstalk with tree-grow and seed-fall.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="js/model/Seed.js"></script>
     <script src="js/model/Background.js"></script>
     <script src="js/model/CaptchaProcessor.js"></script>
+    <script src="js/controller/LocalStorageController.js"></script>
     <script src="js/controller/MenuController.js"></script>
     <script src="js/controller/StageController.js"></script>
     <script src="js/controller/GameController.js"></script>
