--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     </script>
 </head>
-<body onload="init()" style="background:#ccc" >
+<body onload="init()">
 
 <canvas id="myCanvas" ></canvas>
 
@@ -45,28 +45,118 @@
     <canvas id="popupCanvas"></canvas>
 </div>
 
-<div id="dialog-message" style="display:none; text-align:center">
-    <p>
-        <button onClick="EventBus.dispatch(&quot;exitMenu&quot;);EventBus.dispatch(&quot;newGame&quot;)">New Game</button>
-    </p>
-    <p>
-        <button id="resumeButton" onClick="EventBus.dispatch(&quot;resumeGame&quot;)">Resume Game</button>
-    </p>
-    <p>
-        <!--<button onClick="EventBus.dispatch(&quot;exitMenu&quot;);EventBus.dispatch(&quot;showShop&quot;)">Shop</button>-->
-    </p>
-    <p>
-        <button onClick="EventBus.dispatch(&quot;exitMenu&quot;)">Exit</button>
-    </p>
-    <p>
-        <button>Help</button>
-    </p>
+<div id="menu-wrapper" class="outer-wrapper">
+    <div class="inner-wrapper">
+        <div class="center-container">
+            <div class="title">WELCOME</div>
+            <div class="menu-input-wrapper">
+                <div>
+                    <button id="new-game" class="menu-btns" onClick="EventBus.dispatch(&quot;exitMenu&quot;);EventBus.dispatch(&quot;newGame&quot;)">NEW GAME</button>
+                    <button id="resumeButton" class="menu-btns" onClick="EventBus.dispatch(&quot;resumeGame&quot;)">RESUME GAME</button>
+                    <!--<button onClick="EventBus.dispatch(&quot;exitMenu&quot;);EventBus.dispatch(&quot;showShop&quot;)">Shop</button>-->
+                    <button id="continueButton" class="menu-btns" onClick="EventBus.dispatch(&quot;exitMenu&quot;);EventBus.dispatch(&quot;continueGame&quot;)">CONTINUE</button>
+                    <button class="menu-btns" onClick="EventBus.dispatch(&quot;exitMenu&quot;)">EXIT</button>
+                    <button class="menu-btns">HELP</button>
+                    <div>
+                    <button class="volume-btns"></button>
+                    <button class="volume-btns"></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+<div id="login-wrapper" class="outer-wrapper">
+    <div class="inner-wrapper">
+        <div class="center-container">
+            <div class="title">LOGO</div>
+            <div class="login-input-wrapper">
+                <h4>LOGIN TO SAVE THE PROGRESS IN THE CLOUD</h4>
+                <div>
+                    <p>EMAIL ADDRESS</p>
+                     <div class="input-container">
+                    <input type="text" id="user-name" />
+                    </div>
+                    <p>PASSWORD</p>
+                    <div class="input-container">
+                        <input type="password" id="password" />
+                        <span class="forgot-password" onClick="EventBus.dispatch(&quot;resetPassword&quot;)">?</span>
+                    </div>
+                    <div class="login-buttons">
+                        <div class="button-conatiner">
+                            <button id="login" onClick="EventBus.dispatch(&quot;userLogin&quot;)">LOGIN</button>
+                        </div>
+                        <div class="button-conatiner">
+                            <button id="register" onClick="EventBus.dispatch(&quot;showRegisterScreen&quot;)">REGISTER</button>
+                        </div>
+                    </div>
+                    <div style="clear:both"></div>
+                    <p class="error-msg msg" style="color: red; display: none;">Error</p>
+                    <p class="login-msg msg" style="color: #177F00; display: none;">Logging....</p>
+                    <p class="reset-password-msg msg" style="color: #177F00; display: none;">Reset password link is send to your email</p>
+                </div>
+            </div>
+            <button id="play-as-guest" onClick="EventBus.dispatch(&quot;playAsGuest&quot;)">PLAY AS GUEST</button>
+        </div>
+    </div>
+</div>
+
+<div id="register-wrapper" class="outer-wrapper">
+    <div class="inner-wrapper">
+        <div class="center-container">
+            <div class="title">LOGO</div>
+            <div class="register-input-wrapper">
+                <h4>REGISTER</h4>
+                <div>
+                    <p>EMAIL ADDRESS</p>
+                     <div class="input-container">
+                        <input type="text" id="register-user-name" />
+                    </div>
+                    <p>PASSWORD</p>
+                    <div class="input-container">
+                        <input type="password" id="register-password" />
+                    </div>
+                    <p>CONFIRM PASSWORD</p>
+                    <div class="input-container">
+                        <input type="password" id="confirm-password" />
+                    </div>
+                    <div class="register-buttons">
+                            <button id="register-submit" onClick="EventBus.dispatch(&quot;registerUser&quot;)">REGISTER</button>
+                    </div>
+                    <div style="clear:both"></div>
+                    <p class="error-msg msg" style="color: red; display: none;">Error</p>
+                    <p class="register-msg msg" style="color: blue; display: none;">Registering.......</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="score-wrapper" class="outer-wrapper">
+    <div class="inner-wrapper">
+        <div class="center-container">
+            <div class="title">HIGHSCORES</div>
+            <div class="score-output-wrapper">
+                <h4>ALL TIME</h4>
+                <div>
+                    <div class="input-container"></div>
+                </div>
+                 <h4>WEEKLY</h4>
+                <div>
+                    <div class="input-container"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <div id="canvasHolder" style="padding-top: 10px; padding-bottom: 20px">
     <input id="passButton" type="button" value="Pass" onclick="EventBus.dispatch(&quot;passText&quot;)" ></input>
     <input id="inputText" type="text" placeholder="Enter captcha" onkeydown="if(event.keyCode == 13){EventBus.dispatch(&quot;compareCaptcha&quot;)}" autofocus></input>
     <input id="submitButton" type="button" value="Submit" onclick="EventBus.dispatch(&quot;compareCaptcha&quot;)"></input>
+    <!--<input id="submitButton" type="button" value="Submit" onclick="EventBus.dispatch(&quot;compareCaptcha&quot;)"></input>-->
 </div>
 
 </body>
