Changed text in login screen. Modified Input text position. Removed exit button.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
                     <button id="highScore-btn" class="menu-btns" onClick="EventBus.dispatch(&quot;highScore&quot;)">HIGH SCORES</button>
                     <button id="logOut-btn" class="menu-btns" onClick="EventBus.dispatch(&quot;logOut&quot;)">LOG OUT</button>
                     <button class="menu-btns">HELP</button>
-                    <button class="menu-btns" onClick="EventBus.dispatch(&quot;exitMenu&quot;)">EXIT</button>
                     <div>
                         <button class="volume-btns round-btns"></button>
                         <button class="volume-btns round-btns"></button>
@@ -91,7 +90,7 @@
         <div class="center-container">
             <div class="title">LOGO</div>
             <div class="login-input-wrapper">
-                <h4>LOGIN TO SAVE THE PROGRESS IN THE CLOUD</h4>
+                <h4>LOGIN TO SAVE YOUR PROGRESS ONLINE</h4>
                 <div>
                     <p>EMAIL ADDRESS</p>
                      <div class="input-container">
