Added music icon for music button.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <button class="menu-btns">HELP</button>
                     <div>
                         <button class="volume-btns round-btns"></button>
-                        <button class="volume-btns round-btns"></button>
+                        <button class="music-btns round-btns"></button>
                     </div>
                 </div>
             </div>
