Fixed ticker pause issue.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <button class="volume-btns round-btns" onClick="$(this).toggleClass('off-state');"></button>
         <button class="info-btns round-btns"></button>
-        <button class="exit-btns round-btns" onClick="EventBus.dispatch(&quot;backButtonClick&quot;);"></button>
+        <button class="exit-btns round-btns" onClick="EventBus.dispatch(&quot;closeButtonClick&quot;);"></button>
     </div>
     
 <canvas id="myCanvas" ></canvas>
