Show/hide help screen

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <!--<input id="submitButton" type="button" value="Submit" onclick="EventBus.dispatch(&quot;compareCaptcha&quot;)"></input>-->
 </div>
 
-<div id="help-screen" class="main-wapper">
+<div id="help-screen" class="main-wrapper">
     <button class="help-back-button" onClick="EventBus.dispatch(&quot;hideHelp&quot;)">Back</button>
     <div class="main-title">INSTRUCTIONS</div>
     <div class="help-screen-content">
