- Updated login and register page style. - Added splash screens before loader.

--- a/index.html
+++ b/index.html
@@ -217,11 +217,16 @@
     </div>
 </div>
 
-<div id="splash-screen" class="main-wapper">
+<div id="bhl-splash-screen" class="splash-screen main-wapper">
     <div class="splash-screen-container">
-       <img class="BHL-logo" src="shapes/hs_table_inner_bg.png"/>
+       <img src="shapes/bhl_logo.png"/>
     </div>
 </div>
 
+<div id="tiltfactor-splash-screen" class="splash-screen main-wapper">
+    <div class="splash-screen-container">
+       <img src="shapes/tiltfactor_logo.png"/>
+    </div>
+</div>
 </body>
 </html>
