Integrate continue/resume functionalities. Fixed the issue with saving the current tree.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <div>
                     <button id="new-game" class="menu-btns" onClick="EventBus.dispatch(&quot;exitMenu&quot;);EventBus.dispatch(&quot;newGame&quot;)">NEW GAME</button>
-                    <button id="resumeButton" class="menu-btns" onClick="EventBus.dispatch(&quot;resumeGame&quot;)">RESUME GAME</button>
+                    <!--<button id="resumeButton" class="menu-btns" onClick="EventBus.dispatch(&quot;resumeGame&quot;)">RESUME GAME</button>-->
                     <!--<button onClick="EventBus.dispatch(&quot;exitMenu&quot;);EventBus.dispatch(&quot;showShop&quot;)">Shop</button>-->
                     <button id="continueButton" class="menu-btns" onClick="EventBus.dispatch(&quot;exitMenu&quot;);EventBus.dispatch(&quot;continueGame&quot;)">CONTINUE</button>
                     <button id="highScore-btn" class="menu-btns" onClick="EventBus.dispatch(&quot;highScore&quot;)">HIGH SCORES</button>
