--- a/index.html
+++ b/index.html
@@ -219,13 +219,13 @@
 
 <div id="bhl-splash-screen" class="splash-screen main-wapper">
     <div class="splash-screen-container">
-       <img src="shapes/bhl_logo.png"/>
+       <img src="shapes/BHL_Logo.png"/>
     </div>
 </div>
 
 <div id="tiltfactor-splash-screen" class="splash-screen main-wapper">
     <div class="splash-screen-container">
-       <img src="shapes/tiltfactor_logo.png"/>
+       <img src="shapes/Tiltfacor_on_White.png"/>
     </div>
 </div>
 </body>
