Ingame hud shows the current height of the beanstalk.

--- a/index.html
+++ b/index.html
@@ -40,12 +40,11 @@
             gc = new GameController();
             gc.init();
         }
-
     </script>
 </head>
 <body onload="init()">
     <div id="topButtonHolder" class="buttonHolder">
-        <div id="trees-grown-bar">
+        <div id="current-height-bar">
             <label>0</label>
         </div>
         <button class="volume-btns round-btns" onClick="$(this).toggleClass('off-state');"></button>
