--- a/index.html
+++ b/index.html
@@ -239,15 +239,12 @@
         </div>
     </div>
 </div>
-<div id="bhl-splash-screen" class="splash-screen main-wapper">
-    <div class="splash-screen-container">
-       <img src="shapes/BHL_Logo.png"/>
-    </div>
-</div>
 
-<div id="tiltfactor-splash-screen" class="splash-screen main-wapper">
+<div id="main-splash-screen" class="splash-screen main-wapper">
     <div class="splash-screen-container">
-       <img src="shapes/Tiltfacor_on_White.png"/>
+        <img id="MBG-logo" class="splash-logo" src="shapes/MBG-Logo.jpg"/>
+        <img id="BHL-logo" class="splash-logo" src="shapes/BHL_Logo.png"/>
+        <img id="tiltfactor-logo" class="splash-logo" src="shapes/Tiltfacor_on_White.png"/>
     </div>
 </div>
 </body>
