Total beanstalk rewrite

--- a/src/Beanstalk/wwwroot/html/highscores screen.html
+++ b/src/Beanstalk/wwwroot/html/highscores screen.html
@@ -6,48 +6,48 @@
 
 	<div class="menu-container">
 		<div class="alltime">
-			<div class="score-row row row-0">
+			<div class="score-row row">
 				<span class="position col-xs-4">1st</span>
 				<span class="name col-xs-4">martin.c</span>
-				<span class="position col-xs-4">999m</span>
+				<span class="height col-xs-4">999m</span>
 			</div>
-			<div class="score-row row row-1">
+			<div class="score-row row">
 				<span class="position col-xs-4">2nd</span>
 				<span class="name col-xs-4">martin.c</span>
-				<span class="position col-xs-4">999m</span>
+				<span class="height col-xs-4">999m</span>
 			</div>
-			<div class="score-row row row-2">
+			<div class="score-row row">
 				<span class="position col-xs-4">3rd</span>
 				<span class="name col-xs-4">martin.c</span>
-				<span class="position col-xs-4">999m</span>
+				<span class="height col-xs-4">999m</span>
 			</div>
-			<div class="score-row row row-3">
+			<div class="score-row row player">
 				<span class="position col-xs-4">9999th</span>
 				<span class="name col-xs-4">martin.c</span>
-				<span class="position col-xs-4">999m</span>
+				<span class="height col-xs-4">999m</span>
 			</div>
 		</div>
 
 		<div class="weekly">
-			<div class="score-row row row-0">
+			<div class="score-row row">
 				<span class="position col-xs-4">1st</span>
 				<span class="name col-xs-4">martin.c</span>
-				<span class="position col-xs-4">999m</span>
+				<span class="height col-xs-4">999m</span>
 			</div>
-			<div class="score-row row row-1">
+			<div class="score-row row">
 				<span class="position col-xs-4">2nd</span>
 				<span class="name col-xs-4">martin.c</span>
-				<span class="position col-xs-4">999m</span>
+				<span class="height col-xs-4">999m</span>
 			</div>
-			<div class="score-row row row-2">
+			<div class="score-row row">
 				<span class="position col-xs-4">3rd</span>
 				<span class="name col-xs-4">martin.c</span>
-				<span class="position col-xs-4">999m</span>
+				<span class="height col-xs-4">999m</span>
 			</div>
-			<div class="score-row row row-3">
+			<div class="score-row row player">
 				<span class="position col-xs-4">9999th</span>
 				<span class="name col-xs-4">martin.c</span>
-				<span class="position col-xs-4">999m</span>
+				<span class="height col-xs-4">999m</span>
 			</div>
 		</div>
 
