--- a/src/Beanstalk/wwwroot/html/main menu.html
+++ b/src/Beanstalk/wwwroot/html/main menu.html
@@ -5,9 +5,9 @@
 	<button class="back"></button>
 
 	<div class="menu-container">
-		<button class="play">PLAY</button>
-		<button class="highscores">HIGH SCORES</button>
-		<button class="help">HELP</button>
+		<button class="play text-button">PLAY</button>
+		<button class="highscores text-button">HIGH SCORES</button>
+		<button class="instructions text-button">HELP</button>
 		<button class="music"></button>
 		<button class="sound"></button>
 	</div>
