--- a/src/Beanstalk/wwwroot/index.html
+++ b/src/Beanstalk/wwwroot/index.html
@@ -28,6 +28,8 @@
     <script src="lib/jquery-deparam/jquery-deparam.js"></script>
     <script src="lib/jquery-mousewheel/jquery.mousewheel.js"></script>
     <script src="lib/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.js"></script>
+    <script src="lib/moment/moment.js"></script>
+    <script src="lib/parse/parse.min.js"></script>
     <script src="lib/seiyria-bootstrap-slider/bootstrap-slider.js"></script>
     <script src="lib/underscore/underscore.js"></script>
     <script src="js/screens/ScreenBase.js"></script>
@@ -48,10 +50,16 @@
     <script src="js/actors/mapdot.js"></script>
     <script src="js/actors/maplevel.js"></script>
     <script src="js/actors/stadium.js"></script>
+    <script src="js/data/Beanstalk.js"></script>
+    <script src="js/data/LoadingBar.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/managers/AudioManager - Copy.js"></script>
+    <script src="js/managers/BackendManager - Copy.js"></script>
+    <script src="js/managers/BackendManager.js"></script>
     <script src="js/managers/BeanstalkManager.js"></script>
     <script src="js/managers/CaptchasManager.js"></script>
     <script src="js/managers/DifficultyManager.js"></script>
+    <script src="js/managers/ParseManager.js"></script>
     <script src="js/managers/PowerupsManager.js"></script>
     <script src="js/managers/TimeTrailManager.js"></script>
     <script src="js/managers/UpgradesManager.js"></script>
