--- a/src/Beanstalk/wwwroot/html/game screen.html
+++ b/src/Beanstalk/wwwroot/html/game screen.html
@@ -1,5 +1,17 @@
 ﻿<div id="gameScreen" class="beanstalk-screen">
 
-	
+	<div class="top-hud">
+		<div class="height">1345m</div>
+		<button class="back"></button>
+		<button class="help"></button>
+		<button class="music"></button>
+		<button class="sound"></button>
+	</div>
+
+	<div class="bottom-hud">
+		<button class="pass-btn">PASS</button>
+		<input type="text" placeholder="enter phrase" />
+		<button class="submit">SUBMIT</button>
+	</div>
 
 </div>
