start of beanstalk growing logic

--- a/src/Beanstalk/wwwroot/html/login screen.html
+++ b/src/Beanstalk/wwwroot/html/login screen.html
@@ -7,6 +7,7 @@
 		<div class="inputs">
 			<input class="email" type="text" placeholder="email" />
 			<input class="password" type="password" placeholder="password" />
+			<a class="forgot-password">?</a>
 		</div>		
 		<button class="login">LOGIN</button>
 		<button class="register">REGISTER</button>
