--- a/src/Beanstalk/wwwroot/index.html
+++ b/src/Beanstalk/wwwroot/index.html
@@ -35,14 +35,19 @@
     <script src="js/screens/ScreenBase.js"></script>
     <script src="js/actors/Athlete.js"></script>
     <script src="js/actors/AudienceMember.js"></script>
+    <script src="js/actors/Beanstalk.js"></script>
     <script src="js/actors/Captcha.js"></script>
     <script src="js/actors/CommentatorBubble.js"></script>
     <script src="js/actors/CorrectIncorrectIndicator.js"></script>
     <script src="js/actors/Enemy.js"></script>
     <script src="js/actors/Framerate.js"></script>
+    <script src="js/actors/LoadingBar - Copy.js"></script>
     <script src="js/actors/LoadingBar.js"></script>
     <script src="js/actors/MapShop.js"></script>
     <script src="js/actors/MapSurvival.js"></script>
+    <script src="js/actors/Plant - Copy.js"></script>
+    <script src="js/actors/Plant.js"></script>
+    <script src="js/actors/PlantStalk.js"></script>
     <script src="js/actors/Powerup.js"></script>
     <script src="js/actors/PowerupHudIcon.js"></script>
     <script src="js/actors/StarBackground.js"></script>
@@ -57,6 +62,7 @@
     <script src="js/managers/BackendManager - Copy.js"></script>
     <script src="js/managers/BackendManager.js"></script>
     <script src="js/managers/BeanstalkManager.js"></script>
+    <script src="js/managers/CaptchaManager.js"></script>
     <script src="js/managers/CaptchasManager.js"></script>
     <script src="js/managers/DifficultyManager.js"></script>
     <script src="js/managers/ParseManager.js"></script>
