start of the tinytown work

--- a/src/Beanstalk/wwwroot/index.html
+++ b/src/Beanstalk/wwwroot/index.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
@@ -42,16 +42,17 @@
     <script src="lib/seiyria-bootstrap-slider/bootstrap-slider.js"></script>
     <script src="lib/underscore/underscore.js"></script>
     <script src="lib/wordCompare.js"></script>
+    <script src="js/actors/tinytown/TinyTownAnim.js"></script>
     <script src="js/screens/ScreenBase.js"></script>
     <script src="js/actors/Background.js"></script>
     <script src="js/actors/Captcha.js"></script>
     <script src="js/actors/LoadingBar.js"></script>
     <script src="js/actors/Plant.js"></script>
     <script src="js/actors/PlantStalk.js"></script>
-    <script src="js/actors/Seed - Copy.js"></script>
     <script src="js/actors/Seed.js"></script>
     <script src="js/actors/SidePlant.js"></script>
     <script src="js/actors/TopStalk.js"></script>
+    <script src="js/actors/tinytown/Blimp.js"></script>
     <script src="js/data/Beanstalk.js"></script>
     <script src="js/main.js"></script>
     <script src="js/managers/AudioManager.js"></script>
