Tiny towns implemented

--- a/src/Beanstalk/wwwroot/index.html
+++ b/src/Beanstalk/wwwroot/index.html
@@ -52,7 +52,11 @@
     <script src="js/actors/Seed.js"></script>
     <script src="js/actors/SidePlant.js"></script>
     <script src="js/actors/TopStalk.js"></script>
+    <script src="js/actors/tinytown/Blimp - Copy.js"></script>
     <script src="js/actors/tinytown/Blimp.js"></script>
+    <script src="js/actors/tinytown/Deer - Copy.js"></script>
+    <script src="js/actors/tinytown/Deer.js"></script>
+    <script src="js/actors/tinytown/ManWindow.js"></script>
     <script src="js/data/Beanstalk.js"></script>
     <script src="js/main.js"></script>
     <script src="js/managers/AudioManager.js"></script>
